Fri Feb  5 16:34:13 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * tools/odds_monitor/doc/userguide.html:

          Documented the QT_CFG environment variable and added steps
          for building with VC++.

Fri Feb  5 16:13:51 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * tools/odds_monitor/README:

          Replaced explicit environment setup and build instructions with
          a reference to the user guide.

Fri Feb  5 15:59:27 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * NEWS:

          Added a reference to the OpenDDS-Bench documentation directory.

        * performance-tests/Bench/doc/scenarios.txt:
        * performance-tests/Bench/doc/tests-latency.txt:
        * performance-tests/Bench/doc/tests.txt:

          Added '.txt' extension to these text files to accommodate those
          who need it.

Fri Feb  5 15:39:33 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * tools/odds_monitor/doc/odds_monitor.man1:

          Removed this file.

Fri Feb  5 15:24:19 UTC 2010  Paul Calabrese  <calabrese_p@ociweb.com>

        * NEWS:

          Add Monitor library entry (README to follow shortly).

Fri Feb  5 14:08:04 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * docs/html/multicast/multicast.html:

          Updated documentation for next release.

Fri Feb  5 13:22:12 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * tests/DCPS/TestFramework/TestFramework.h:
        * tests/DCPS/TestFramework/TestFramework.cpp:

          Fixed compiler warnings/errors for GCC and VC++.

Fri Feb  5 12:58:18 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * tests/DCPS/SharedTransport/SharedTransport.mpc:
        * tests/DCPS/SharedTransport/TestCase.cpp:
        * tests/DCPS/TestFramework/TestFramework.cpp:

          Fixed compiler warnings/errors for GCC and VC++.

Fri Feb  5 02:18:21 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/transport/framework/DataLink.cpp:
